Correções nas operações utilizando linkedlist var